Finish edit resident interface

--- a/src/main/webapp/resources/css/custom.css
+++ b/src/main/webapp/resources/css/custom.css
@@ -68,6 +68,10 @@ body {
 	margin-bottom: 16px;
 }
 
+table a {
+	text-decoration: underline;
+}
+
 /* Dashboard CSS */
 .dash_img img {
 	width: 80px;
